tests/NormalTests/paczka1/small_fuzzy/17443953.err
Error in line 3: 71vBc S976 29,28
Error in line 1: S989 S989 80,6
Error in line 11: S989 A347 58,5
